Project details route added. Tests working with Nebula.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
 
   <nb-layout-header fixed>
     <button nbButton ghost [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active-link" routerLink="/">HOME</button>
-    <button nbButton ghost routerLinkActive="active-link" routerLink="projects">PROJECT</button>
+    <button nbButton ghost routerLinkActive="active-link" routerLink="projects">PROJECTS</button>
+    <button nbButton ghost routerLinkActive="active-link" routerLink="playground">PLAYGROUND</button>
     <button nbButton ghost routerLinkActive="active-link" routerLink="about">ABOUT</button>
   </nb-layout-header>
 
