--- a/src/app/core/project/projects/projects.component.html
+++ b/src/app/core/project/projects/projects.component.html
@@ -5,14 +5,15 @@
 </nb-card>
 
 <div class="projects-list">
-    <nb-card class="project" size="small" *ngFor="let project of processedProjects; trackBy: trackProject" @fadeIn>
-      <nb-card-header>{{project.name}}</nb-card-header>
-      <nb-card-body>
-        <div class="project-image" [style.background-image]="'url('+ project.imageUrl +')' | safe: 'style'"></div>
-        <div class="project-description">
-          {{project.description}}
-        </div>
-      </nb-card-body>
-      <nb-card-footer>{{project.tags | stringArray}}</nb-card-footer>
-    </nb-card>
+  <nb-card [routerLink]="''+project.id" class="project" size="small"
+           *ngFor="let project of processedProjects; trackBy: trackProjectItem" @fadeIn>
+    <nb-card-header>{{project.name}}</nb-card-header>
+    <nb-card-body>
+      <div class="project-image" [style.background-image]="'url('+ project.imageUrl +')' | safe: 'style'"></div>
+      <div class="project-description">
+        {{project.description}}
+      </div>
+    </nb-card-body>
+    <nb-card-footer>{{project.tags | stringArray}}</nb-card-footer>
+  </nb-card>
 </div>
