Back button from project details route. Project interface extended with techDescription property.

--- a/src/app/core/project/project/project.component.html
+++ b/src/app/core/project/project/project.component.html
@@ -1,8 +1,22 @@
 <nb-card>
-  <nb-card-header>{{project.name}}</nb-card-header>
+  <nb-card-header>
+    <button
+      class="back-button"
+      ghost
+      nbButton
+      size="tiny"
+      routerLink="/projects"
+    >
+      <nb-icon icon="corner-up-left-outline"></nb-icon>
+    </button>
+    {{project.name}}
+  </nb-card-header>
   <nb-card-body>
     <nb-layout>
-      <nb-layout-column>{{project.description}}</nb-layout-column>
+      <nb-layout-column>
+        <p>{{project.description}}</p>
+        <p>{{project.techDescription}}</p>
+      </nb-layout-column>
       <nb-layout-column>
         <div class="gallery">
           <img *ngFor="let image of project.images" [src]="image">
