--- a/src/app/core/home/home/home.component.html
+++ b/src/app/core/home/home/home.component.html
@@ -1,3 +1,3 @@
-<p>
-  home works!
+<p class="text-center">
+  I’m a passionate software developer specialized in front-end, experienced in back-end and loved in games development.
 </p>
