--- a/src/app/core/home/home/home.component.html
+++ b/src/app/core/home/home/home.component.html
@@ -1,3 +1,22 @@
-<p class="text-center">
-  I’m a passionate software developer specialized in front-end, experienced in back-end and loved in games development.
-</p>
+<div class="container">
+  <div class="about-text">
+    <p style="font-weight: bold">Hi, im Adam,</p>
+    <p>
+      passionate software developer specialized in front-end, experienced in back-end and loved in game development.
+    </p>
+    <p>Developing gamification platform at <a href="https://oskarwegner.pl" target="_blank">Oskar Wegner</a>.
+    </p>
+    <p>Love to explore new technologies from Web to IoT and having fun with it.</p>
+    <p>Currently exploring possibilities of blockchain, digital assets and smart contracts/oracles.</p>
+
+    <p>When not coding apps I'm making games, mastering photos or planning my next journey.</p>
+    <p>Whenever I can i go outside for a long walk, running, playing football or riding a bike. I love to journey with
+      tent, drive my car on "endless" roads, climbing and skiing in Alps and tasting all local beers on the way. </p>
+    <p>Contact:</p>
+    <p>
+      <a href="https://twitter.com/adam_kaczmarek_" target="_blank">Twitter</a>
+      &nbsp;
+      <a href="https://www.linkedin.com/in/adam-kaczmarek-b22810a8/" target="_blank">LinkedIn</a>
+    </p>
+  </div>
+</div>
