--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,19 +1,41 @@
 @import 'themes';
-
 @import '~@nebular/theme/styles/globals';
+@import "styles/variables";
 
 @include nb-install() {
   @include nb-theme-global();
-};
+}
+
+;
 /* You can add global styles to this file, and also import other style files */
 
 .appearance-ghost {
   &.active-link {
     color: #000 !important;
-    border: solid 3px #000  !important;
+    border: solid 3px #000 !important;
 
     &:focus {
       box-shadow: none;
     }
+  }
+}
+
+@media screen and (max-width: 320px) {
+  nb-layout-header {
+    overflow: hidden;
+    max-width: 320px;
+  }
+}
+
+.lightboxOverlay {
+  max-width: 100vw;
+  max-height: 100vh;
+  overflow: hidden;
+}
+
+.isHome {
+  .content {
+    //background: url(assets/me.jpg) center no-repeat;
+    background-size: cover;
   }
 }
