Added some screenshots. ImageThumb pipe created.

--- a/src/app/core/home/home/home.component.html
+++ b/src/app/core/home/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="about-text">
-    <p style="font-weight: bold">Hi, im Adam,</p>
+    <p style="font-weight: bold">Hi, i'm Adam,</p>
     <p>
       passionate software developer specialized in front-end, experienced in back-end and loved in game development.
     </p>
