--- a/src/app/core/project/project/project.component.html
+++ b/src/app/core/project/project/project.component.html
@@ -20,7 +20,7 @@
         <p [innerHTML]="project.techDescription"></p>
       </div>
       <div class="project-media">
-        <img *ngFor="let image of project.images; let index=index" (click)="show(index)" [src]="image">
+        <img *ngFor="let image of project.images; let index=index" (click)="show(index)" [src]="image | imageThumb">
       </div>
     </div>
   </nb-card-body>
