--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,11 +31,14 @@
   max-width: 100vw;
   max-height: 100vh;
   overflow: hidden;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 .isHome {
   .content {
-    //background: url(assets/me.jpg) center no-repeat;
+    background: url(assets/me.jpg) center no-repeat;
     background-size: cover;
   }
 }
