About description, stack groups.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <nb-layout>
   <nb-layout-header fixed>
     <button nbButton ghost [routerLinkActiveOptions]="{ exact: true }" routerLinkActive="active-link" routerLink="/">
-      ABOUT
+      HI
     </button>
     <button nbButton ghost routerLinkActive="active-link" routerLink="projects">PROJECTS</button>
     <!--<button nbButton ghost routerLinkActive="active-link" routerLink="playground">PLAYGROUND</button>-->
-    <!--<button nbButton ghost routerLinkActive="active-link" routerLink="about">ABOUT</button>-->
+    <button nbButton ghost routerLinkActive="active-link" routerLink="about">ABOUT</button>
   </nb-layout-header>
 
   <nb-layout-column>
