--- a/src/app/core/about/about/about.component.html
+++ b/src/app/core/about/about/about.component.html
@@ -1,3 +1,13 @@
 <p>
-  about works!
+  <small>Primary (professional) tech stack</small><br>
+  JavaScript, TypeScript, Angular, NgRx, RxJs, Ionic/Cordova, PhaserJS,
+  NodeJS/NestJS, WebGl/GLSL, SCSS/LESS, SVG.
+</p>
+
+<p>
+  <small>Secondary (intermediate) stack</small><br> React, PHP/Symfony, Java, Photoshop, Blender.
+</p>
+
+<p>
+  <small>Hobbist stack/interests</small><br> Unity, UnrealEngine, C#, C, XRP Ledger / Blockchain / Smart Contract
 </p>
