--- a/src/app/core/project/projects/projects.component.scss
+++ b/src/app/core/project/projects/projects.component.scss
@@ -1,3 +1,8 @@
+:host {
+  display: block;
+  max-width: 1200px;
+  margin: 0 auto;
+}
 .projects-list {
   justify-content: space-around;
   display: flex;
